# de7-kafka-redpanda-docker-compose-pyflink-postgres-streaming

./: README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: consumer_db.ipynb  producer.ipynb
src/consumers/: consumer_postgres.py
src/job/: green_5min_tumble_job.py  green_pass_through_job.py  pass_through_job.py
src/producers/: green_models.py  green_producer.py  models.py  producer.py
