[project]
name = "de7-kafka-redpanda-docker-compose-pyflink-postgres-streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-flink>=1.9.3",
    "kafka-python>=2.3.0",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pyflink>=1.0",
]
